--- a/results.html
+++ b/results.html
@@ -35,7 +35,7 @@
         </ul>
     </ol>
 <div>
-    <a href="https://youtu.be/QwLvrnlfdNo?si=_HhnLgBWDJfnTlOt"><img src="doggo.gif" width="70%"></a>
+    <a href="https://youtu.be/QwLvrnlfdNo?si=_HhnLgBWDJfnTlOt" target="_blank"><img src="doggo.gif" width="70%"></a>
     <h1>Thank you for your time!</h1>
     <h6>(Don't click the image)</h6>
 </div>
