--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
     <br>
     <label for="reasoning">Why do you want to join the Baguette Cult?</label>
     <br>
-    <textarea rows="10" cols="102" name="Sreasoning"></textarea>
+    <textarea rows="10" cols="102" name="reasoning" placeholder="Type here..."></textarea>
     <br>
     <br>
     <label for="sellingpoint">What makes you worthy enough to join our esteemed organization?</label>
     <br>
-    <textarea rows="10" cols="102" name="sellingpoint"></textarea>
+    <textarea rows="10" cols="102" name="sellingpoint" placeholder="Type here..."></textarea>
     <br>
     <label for="additionalinfo">Anything you want us to know that isn't on your application?</label>
     <br>
-    <textarea rows="5" cols="102" name="additionalinfo"></textarea>
+    <textarea rows="5" cols="102" name="additionalinfo" placeholder="Type here..."></textarea>
     
     <br>
     <br>
