--- a/results.html
+++ b/results.html
@@ -9,7 +9,7 @@
 <body>
 <div>
     <h1>You did it!</h1>
-    <img src="cat screech.png" width="70%">
+    <img src="images\cat screech.png" width="70%">
     <p>You just submitted your application to the Baguette Cult!</p>
 </div>
     <p>Here's what you can do in the meantime:</p>
@@ -35,7 +35,7 @@
         </ul>
     </ol>
 <div>
-    <a href="https://youtu.be/QwLvrnlfdNo?si=_HhnLgBWDJfnTlOt" target="_blank"><img src="doggo.gif" width="70%"></a>
+    <a href="https://youtu.be/QwLvrnlfdNo?si=_HhnLgBWDJfnTlOt" target="_blank"><img src="images\doggo.gif" width="70%"></a>
     <h1>Thank you for your time!</h1>
     <h6>(Don't click the image)</h6>
 </div>
