--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
     <h1>Welcome to the Baguette Cult!</h1>
-    <img src="/images/french venti.webp" width="80%" style="text-align: center">
+    <img src="images\french venti.webp" width="80%" style="text-align: center">
     <p>An underground network of baguette lovers teaming up to take down our archenemies, the Croissant Network. We host events weekly to share our love for baguettes, network, and support each other :D</p>
     <p>Does this sound interesting to you? Great! </p>
     <h5>But first, we need to make sure you're not one of those <em>croissant lovers</em> in disguise...</h5>
